<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Open Brew</string>
    <string name="action_settings">Settings</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient_type">Ingredient Type</string>
    <string name="hops">Hops</string>
    <string name="malt">Malt</string>
    <string name="grain">Grain</string>
    <string name="specialty">Specialty</string>
    <string name="directions">Directions</string>
    <string name="step">Step</string>
    <string name="save">Save</string>
    <string name="new_recipe">New Recipe</string>
    <string name="recipe_book">My Recipe Book</string>
    <string name="no_recipes">No Saved Recipes</string>
    <string name="add_ingredient">+ Add Ingredient</string>
    <string name="recipe_name_title">Recipe Name:</string>

</resources>
