<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecipeActivity" >

    <TableRow
        android:id="@+id/recipeRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/ingredientTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/recipeRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recipeRow1" >

        <TextView
            android:id="@+id/hopsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hops"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/hopsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/recipeRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recipeRow2" >

        <TextView
            android:id="@+id/maltTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/malt"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/maltText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:ems="10"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:id="@+id/recipeRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recipeRow3" >

        <TextView
            android:id="@+id/grainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grain"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/grainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:id="@+id/recipeRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recipeRow4"
        android:addStatesFromChildren="true" >

        <TextView
            android:id="@+id/directionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directions"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/recipeRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recipeRow5" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </TableRow>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal|fill_vertical"
        android:minWidth="100dip"
        android:text="@string/save" />

</RelativeLayout>