<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecipeActivity" >

    <TableRow
        android:id="@+id/recipeNameRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
    
        <TextView
            android:id="@+id/recipeNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </TableRow>
    <TableRow
        android:id="@+id/recipeNameTextRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recipeNameRow" >
    
        <EditText
            android:id="@+id/recipeNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />
        
    </TableRow>
    <TableRow
        android:id="@+id/ingredientTitleRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/recipeNameTextRow" >

        <TextView
            android:id="@+id/ingredientTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/hopsRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ingredientTitleRow" >

        <TextView
            android:id="@+id/hopsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hops"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/hopsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/maltRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/hopsRow" >

        <TextView
            android:id="@+id/maltTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/malt"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/maltText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:ems="10"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:id="@+id/grainRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/maltRow" >

        <TextView
            android:id="@+id/grainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grain"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/grainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:id="@+id/directionsTitleRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/grainRow"
        android:addStatesFromChildren="true" >

        <TextView
            android:id="@+id/directionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directions"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/directionsTextRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/directionsTitleRow" >

        <EditText
            android:id="@+id/directionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </TableRow>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal|fill_vertical"
        android:minWidth="100dip"
        android:text="@string/save" />

</RelativeLayout>